add angular/yz module, my first common module

--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -19,7 +19,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "yz": [
+        "dist/yz/yz",
+        "dist/yz"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
