--- a/angular/package.json
+++ b/angular/package.json
@@ -21,9 +21,11 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1102.13",
     "@angular/cli": "~11.2.14",
     "@angular/compiler-cli": "~11.2.14",
     "@types/node": "^12.11.1",
+    "ng-packagr": "^11.0.0",
     "typescript": "~4.1.5"
   }
 }
