--- a/angular/package.json
+++ b/angular/package.json
@@ -1,11 +1,7 @@
 {
   "name": "angular",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build"
-  },
+  "scripts": {},
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.14",
