新方法, 将同一数组中的某元素插入到另一元素的前面 @0.2.8

--- a/method/tsconfig.json
+++ b/method/tsconfig.json
@@ -1,6 +1,8 @@
 // tsconfig.json 文件
 {
-  "include": ["./*"],
+  "include": [
+    "./*"
+  ],
   "exclude": [],
   "compileOnSave": false, // 在保存时编译
   "compilerOptions": { // 编译选项
