瞎折腾了一下

--- a/angular/angular.json
+++ b/angular/angular.json
@@ -53,8 +53,7 @@
               "demo/assets"
             ],
             "styles": [
-              "demo/styles.css",
-              "../style/style.css"
+              "demo/styles.css"
             ],
             "scripts": []
           },
