--- a/angular/demo/tsconfig.app.json
+++ b/angular/demo/tsconfig.app.json
@@ -6,10 +6,10 @@
     "types": []
   },
   "files": [
-    "main.ts",
-    "polyfills.ts"
+    "src/main.ts",
+    "src/polyfills.ts"
   ],
   "include": [
-    "**/*.d.ts"
+    "src/**/*.d.ts"
   ]
 }
