梳理方法, 整合旧代码, 成功发布 @1.3.1

--- a/angular/package.json
+++ b/angular/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o --port=1314",
-    "build": "ng build"
+    "build-yz": "ng build yz",
+    "publish-yz": "cd dist/yz && npm publish"
   },
   "private": true,
   "dependencies": {
