--- a/angular/yz/package.json
+++ b/angular/yz/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@chengzs/yz",
-  "version": "1.7.1",
-  "keywords": ["angular", "component"],
+  "version": "1.7.2",
+  "keywords": [
+    "angular",
+    "component"
+  ],
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
