--- a/angular/yz/package.json
+++ b/angular/yz/package.json
@@ -11,5 +11,8 @@
   },
   "dependencies": {
     "tslib": "^2.3.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
