--- a/angular/package.json
+++ b/angular/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o --port=1314",
-    "build-yz": "ng build yz",
+    "build-yz": "ng build yz --prod",
     "publish-yz": "cd dist/yz && npm publish"
   },
   "private": true,
