--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -17,7 +17,15 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "yz": [
+        "dist/yz"
+      ],
+      "yz/*": [
+        "dist/yz/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
